--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
   <div class="blurb">
-    <p><strong>Welcome to my website! My name is Arpan Singh. I currently follow a course where I create websites with laravel.</strong> <br /><br /> I was born in Capelle aan den IJssel and I have lived here my whole life. I’m currently on the college TCR in Rotterdam. I follow the course Application and Media developer. This is a level 4 training and I am in the third grade. <br /><br /> <strong>Work</strong>. I currently work as a waiter at Mice en Place. Mise en Place is an employment agency for students. It helps me develop my social skills and it lets me make connections with other people. My working hours are very flexible.</p>
+    <p><strong>Welcome to my website ! My name is Arpan Singh. I currently follow a course where I create applications and websites . Therefore , I have an online portfolio.</strong> <br /><br /> I was born in Capelle aan den IJssel and I have lived here my whole life. I’m currently on the college Zadkine in Rotterdam. I follow the course Application and media developer. This is a level 4 training and I am in the second grade. <br /><br /> <strong>Work</strong>. I currently have a job as shelf restocker at the Dirk van den Broek. I do this work because it’s nice to earn your own money, but it was a bit too much to fill only shelves and to lead a group of people. I am therefore looking for a job where I fill more than shelves. I think selling is so much more fun than filling shelves.</p>
 
   </div>
 
